--- a/html-css/css/bolis.css
+++ b/html-css/css/bolis.css
@@ -1,131 +1,130 @@
 @charset "UTF-8";
 
 body {
-    background-color: WHITE;
+  background-color: WHITE;
+  padding: 0;
+  margin: 0;
+}
+main {
+  background-color: #eee;
+  margin: auto;
+}
+
+section {
+  max-width: 992px;
+  padding: 0.5%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: auto;
 }
 
 h1,
 h2 {
-    font-family: "Nova Square";
-    color: black;
-    margin: 0;
+  font-family: "Nova Square";
+  color: black;
+  margin: 0;
 }
 
 nav {
-    height: 4vw;
-    display: flex;
-    justify-content: center;
-
-    background-color: #f28b30;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  background-color: #f28b30;
 }
 
 nav img {
-    width: 10%;
-    min-width: 70px;
+  width: 10%;
+  min-width: 70px;
 }
 
 nav ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin: auto;
-    padding: 0;
-    width: 992px;
-    height: 100%;
+  max-width: 992px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin: auto;
+  padding: 0;
 }
 
 nav ul li {
-    display: flex;
-    align-content: center;
-    margin: 0 10px;
+  display: flex;
+  align-content: center;
+  margin: 0 10px;
 }
 
 nav a {
-    text-decoration: none;
-    display: flex;
-    align-content: center;
-    color: #000;
+  text-decoration: none;
+  display: flex;
+  align-content: center;
+  color: #000;
 }
 
 a:link {
-    color: #0645ad;
-    background-color: transparent;
-    text-decoration: none;
+  color: #0645ad;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 a:visited {
-    color: #0645ad;
-    background-color: transparent;
-    text-decoration: none;
+  color: #0645ad;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 a:hover {
-    color: #e74c3c;
-    background-color: transparent;
-    text-decoration: underline;
+  color: #e74c3c;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 a:active {
-    color: #e74c3c;
-    background-color: transparent;
-    text-decoration: underline;
+  color: #e74c3c;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 footer {
-    
-    /* position: relative;
+  /* position: relative;
     bottom: 0; */
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    padding: 1%;
 
-    background-color: #f28b30;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1%;
+  background-color: #f28b30;
 }
 
 .text-center {
-    text-align: center;
-}
-
-main {
-    width: 60%;
-    background-color: #eee;
-    margin: auto;
-    padding: 0.7%;
-}
-
-#container-productos {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    justify-content: space-around;
+  text-align: center;
 }
 
 .producto {
-    width: 385px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    background-color: #fff;
-    margin-top: 15px;
-    border-radius: 5px;
-    justify-content: space-between;
+  width: 325px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  margin: 15px 20px;
+  border-radius: 5px;
+  justify-content: space-between;
+}
+
+.producto > div img {
+  width: 100%;
 }
 
 .producto:hover {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 i {
-    color: #30478c;
+  color: #30478c;
 }
 
 nav i:hover {
-    font-size: 2em;
+  font-size: 2em;
 }
