--- a/html-css/bet365/bet365.css
+++ b/html-css/bet365/bet365.css
@@ -1,30 +1,55 @@
 @charset "UTF-8";
 
 body {
-  background-color: #222;
+    background-color: #222;
 }
 
 header {
-  background-color: #14805e;
-  display: flex;
-  flex-direction: row;
-  padding: 0 25px;
+    background-color: #14805e;
+    display: flex;
+    flex-direction: row;
+    padding: 0 25px;
 }
 
 #logo-bet {
-  width: 80%;
-  display: flex;
-  align-content: center;
-  padding: 20px 0;
+    width: 60%;
+    display: flex;
+    align-content: center;
+    padding: 20px 0;
 }
 
 .header-btn {
-  width: 10%;
-  display: flex;
-  align-content: center;
-  justify-content: center;
+    width: 20%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 .header-btn span {
-  display: block;
+    display: inline-flex;
+    color: #fdfefe;
+    align-items: center;
+    font-family: "Trebuchet MS", sans-serif;
+}
+
+section{
+    background-image: url('../img/bet365-background.jpg');
+    height: 80vh;
+
+}
+
+#main-section{
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #fdfefe;
+    padding: 30px;
+    font-family: "Noto Sans";
+}
+
+
+.sectspan1{
+    color:#14805e; 
+    font-size: 1.3em;
 }
