--- a/html-css/bet365/bet365.css
+++ b/html-css/bet365/bet365.css
@@ -6,16 +6,25 @@ body {
 
 header {
     background-color: #14805e;
+
+    width: 100%;
+}
+main{
+    height: 100vh;
+}
+
+#container-header {
     display: flex;
     flex-direction: row;
-    padding: 0 25px;
+    max-width: 992px;
+    margin: auto;
 }
 
 #logo-bet {
     width: 60%;
     display: flex;
     align-content: center;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .header-btn {
@@ -32,24 +41,66 @@ header {
     font-family: "Trebuchet MS", sans-serif;
 }
 
-section{
-    background-image: url('../img/bet365-background.jpg');
-    height: 80vh;
+section {
+    background-image: url("../img/BasketballSoccerTennis_1440-2x.jpg");
+    
+
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#section-container {
+    max-width: 992px;
+    margin: 0 auto;
 
 }
 
-#main-section{
+#main-section {
     display: flex;
     width: 50%;
     flex-direction: column;
     justify-content: space-between;
     color: #fdfefe;
-    padding: 30px;
+    padding: 50px 0 0 30px;
     font-family: "Noto Sans";
 }
 
+.sect-span-1 {
+    color: #4acfa5;
+    font-size: 27px;
+    line-height: 32px;
+    margin-bottom: 5px;
+}
 
-.sectspan1{
-    color:#14805e; 
-    font-size: 1.3em;
+.sect-span-2 {
+    font-size: 4em;
+    margin: 5px 0;
+}
+.sect-span-3 {
+    font-size: 15px;
+    color: #bbb;
+}
+
+#main-section button {
+    width: 200px;
+    padding: 10px 0;
+    border: none;
+    border-radius: 5px;
+    background-color: #ffdf1b;
+    margin: 20px 0;
+}
+
+.sect-span-4 {
+    font-size: 11px;
+    color: #bbb;
+    margin-bottom: 10px;
+}
+
+.underline {
+    text-decoration: underline;
 }
