--- a/html-css/bet365/bet365.css
+++ b/html-css/bet365/bet365.css
@@ -43,12 +43,10 @@ main{
 
 section {
     background-image: url("../img/BasketballSoccerTennis_1440-2x.jpg");
-    
-
     background-repeat: no-repeat;
     background-size: 100%;
-
     height: 100%;
+
     width: 100%;
     display: flex;
     justify-content: center;
@@ -104,3 +102,27 @@ section {
 .underline {
     text-decoration: underline;
 }
+
+i{
+    font-size: 1.5em;
+    margin: 0 5px;
+    color:#222;
+}
+
+i:hover{
+    color:red;
+}
+
+footer{
+    width: 100%;
+    background-color:#14805e;
+    padding:5px 0;
+    text-align: center;
+    font-family: "Noto Sans", sans-serif;
+
+}
+
+footer h1{
+    color: #fdfefe;
+}
+
