--- a/html-css/bet365/bet365.css
+++ b/html-css/bet365/bet365.css
@@ -43,12 +43,11 @@ main {
 }
 
 section {
+  background-image: url("../img/BasketballSoccerTennis_1440-2x.jpg");
   background-repeat: no-repeat;
-  background-image: url("../img/bet365-background.jpg");
-  background-position: top, right;
-  background-size: 100%;
-
+  padding-bottom: 300px;
   width: 100%;
+  background-size: 100%;
   display: flex;
   justify-content: center;
 }
@@ -139,13 +138,14 @@ footer h1 {
   }
 } */
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 992px) and (max-width: 1500px) {
   section {
     background-image: url("../img/bet365-2880.jpg");
     background-size: auto;
     background-position: center;
     background-color: #222;
     background-size: auto 624px;
+    padding: 0;
   }
 
   #main-section {
@@ -153,11 +153,12 @@ footer h1 {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   section {
     background-image: url("../img/bet365-background.jpg");
     background-size: 100%;
     background-color: #222;
+    padding: 0;
   }
 
   #section-container {
@@ -186,45 +187,13 @@ footer h1 {
   }
 }
 
-@media (min-width: 576px) and (max-width: 767px) {
+@media only screen and (min-width: 576px) and (max-width: 767px) {
   section {
     background-image: url("../img/bet-365-background-2.jpg");
     background-color: turquoise;
     background-size: 100%;
     background-color: #222;
-  }
-
-  #section-container {
-    width: 100%;
-    padding: 500px 0 0 0;
-  }
-  #main-section {
-    padding: 50px 0 10% 30px;
-    margin: 0 auto;
     padding: 0;
-  }
-  #main-section button {
-    margin: 20px auto;
-  }
-
-  .sect-span-2 {
-    font-size: 2.5em;
-  }
-
-  .sect-span-1,
-  .sect-span-2,
-  .sect-span-3,
-  .sect-span-4 {
-    text-align: center;
-  }
-}
-
-@media (max-width: 575px) {
-  section {
-    background-image: url("../img/bet-365-background-2.jpg");
-    background-color: turquoise;
-    background-size: 100%;
-    background-color: #222;
   }
 
   #section-container {
