--- a/html-css/bet365/bet365.css
+++ b/html-css/bet365/bet365.css
@@ -187,7 +187,7 @@ footer h1 {
   }
 }
 
-@media only screen and (min-width: 576px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   section {
     background-image: url("../img/bet-365-background-2.jpg");
     background-color: turquoise;
@@ -198,7 +198,7 @@ footer h1 {
 
   #section-container {
     width: 100%;
-    padding: 500px 0 0 0;
+    padding: 200px 0 0 0;
   }
   #main-section {
     padding: 50px 0 10% 30px;
