--- a/html-css/css/index.css
+++ b/html-css/css/index.css
@@ -4,6 +4,7 @@ body {
   background-image: url("../img/roman-markov-GJwsDxDfkXQ-unsplash\ \(1\).jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
 }
 
 nav {
@@ -92,7 +93,7 @@ p {
 @media only screen and (min-width: 992px) and (max-width: 1500px) {
   body {
     background-image: url("../img/roman-markov-GJwsDxDfkXQ-unsplash\ \(1\).jpg");
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 
     background-position: center;
   }
