--- a/html-css/css/pelicula.css
+++ b/html-css/css/pelicula.css
@@ -8,6 +8,7 @@ body {
   background-image: url("../img/mando-wp-2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+    background-position: center;
 }
 header {
   background-color: #023859;
